# strassen

./: .gitignore  CMakeLists.txt  README.md  run_experiments.sh
src/: iterativo.cpp  iterativo_openmp.cpp  recursivo.cpp  recursivo_threaded.cpp
